Separates builded products between Debug and Release.

--- a/D-marina-EasyToReserve/ja.lproj/InfoPlist.strings
+++ b/D-marina-EasyToReserve/ja.lproj/InfoPlist.strings
@@ -8,3 +8,4 @@
 
 "CFBundleDisplayName" = "予約サポート for D-marina";
 "CFBundleName" = "予約サポート for D-marina";
+CFBundleExecutable = "予約サポート for D-marina";
