Renames the apps name for US region.

--- a/D-marina-EasyToReserve/ja.lproj/Main.strings
+++ b/D-marina-EasyToReserve/ja.lproj/Main.strings
@@ -17,7 +17,7 @@
 /* Class = "NSMenuItem"; title = "D-marina-EasyToReserve Help"; ObjectID = "FKE-Sm-Kum"; */
 "FKE-Sm-Kum.title" = "予約サポートヘルプ";
 
-/* Class = "NSWindow"; title = "EZ-NET Reservation Support Tool for D-marina"; ObjectID = "IQv-IB-iLA"; */
+/* Class = "NSWindow"; title = "EZ-NET Booking Support Tool for D-marina"; ObjectID = "IQv-IB-iLA"; */
 "IQv-IB-iLA.title" = "予約サポート for D-marina";
 
 /* Class = "NSMenuItem"; title = "Show All"; ObjectID = "Kd2-mp-pUS"; */
