--- a/D-marina-EasyToReserve/ja.lproj/Main.strings
+++ b/D-marina-EasyToReserve/ja.lproj/Main.strings
@@ -3,10 +3,10 @@
 "1Xt-HY-uBw.title" = "予約サポート for D-marina";
 
 /* Class = "NSMenuItem"; title = "Quit D-marina-EasyToReserve"; ObjectID = "4sb-4s-VLi"; */
-"4sb-4s-VLi.title" = "予約サポートを終了";
+"4sb-4s-VLi.title" = "予約サポート for D-marina を終了";
 
 /* Class = "NSMenuItem"; title = "About D-marina-EasyToReserve"; ObjectID = "5kV-Vb-QxS"; */
-"5kV-Vb-QxS.title" = "予約サポートについて";
+"5kV-Vb-QxS.title" = "予約サポート for D-marina について";
 
 /* Class = "NSMenu"; title = "Main Menu"; ObjectID = "AYu-sK-qS6"; */
 "AYu-sK-qS6.title" = "Main Menu";
@@ -15,7 +15,7 @@
 "F2S-fz-NVQ.title" = "Help";
 
 /* Class = "NSMenuItem"; title = "D-marina-EasyToReserve Help"; ObjectID = "FKE-Sm-Kum"; */
-"FKE-Sm-Kum.title" = "予約サポートヘルプ";
+"FKE-Sm-Kum.title" = "予約サポート for D-marina ヘルプ";
 
 /* Class = "NSWindow"; title = "EZ-NET Booking Support Tool for D-marina"; ObjectID = "IQv-IB-iLA"; */
 "IQv-IB-iLA.title" = "予約サポート for D-marina";
@@ -24,7 +24,7 @@
 "Kd2-mp-pUS.title" = "すべてを表示";
 
 /* Class = "NSMenuItem"; title = "Hide D-marina-EasyToReserve"; ObjectID = "Olw-nP-bQN"; */
-"Olw-nP-bQN.title" = "予約サポートを非表示";
+"Olw-nP-bQN.title" = "予約サポート for D-marina を非表示";
 
 /* Class = "NSMenuItem"; title = "Hide Others"; ObjectID = "Vdr-fp-XzO"; */
 "Vdr-fp-XzO.title" = "ほかを非表示";
